Set PATH variable and set working directory.